Fix tooltip z-index issue

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -322,3 +322,8 @@ body {
     }
 }
 
+.Tooltip {
+    z-index: 1000;
+}
+
+
